Fix alignment of card, add links, header styling, themes

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-pastel-blue;
+    @apply bg-muted-blue;
+    font-family: Inter var;
   }
 }
